# reaver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README  README.md  build_image.sh  dune-project  install.sh  package.json  reaver.opam  reaver.opam.template  run.sh  run_local.sh
.devcontainer/: devcontainer.json
accelJordan/: Makefile  README.txt  apronaux.ml  apronaux.mli  arg2.ml  arg2.mli  auto.ml  auto.mli  bound.ml  bound.mli  cars2.lts  cars2_cst.lts  cars2_plus.lts  convoyCar.lus  counting.ml  counting.mli  cubic_i0.lts  cubic_i1.lts  cubic_i2.lts  demo.sh  derivative.ml  derivative.mli  essai.lts  essai.lus  essai2.lts  exp_div.lts  index.tex  inv_pendulum.lts  (+43 more)
lib/: dune
lib/analysis/: accel.ml  analysisStd.mli  fixpointAcc.ml  fixpointAcc.mli  stratiter.ml  stratiter.mli  stratiter2.ml  stratiter3.ml  stratiter3.mli
lib/apron/: apronHybrid.ml  apronUtil.mli
lib/base/: domain.ml  domain.mli
lib/bddapron/: bddapronHybrid.ml  bddapronUtil.ml  mtbddUtil.ml  mtbddUtil.mli
lib/dftocf/: #df2cfDiscrete.ml#  df2cfDiscrete.ml  df2cfHybrid.mli  zeroTrans.mli
lib/domain/: finDisPart.ml  powerCons.ml  powerCons.mli  template.ml
lib/frontend/nbac/: dune  nbacExpr.ml  nbacLexer.mll  nbacLexer.mll~  nbacParser.mly  nbacParser.mly~  nbacSyntaxCheck.ml  nbacTrans.ml
lib/lp/: apronLp.ml  apronLp.mli
lib/mainutil/: dune  lexerParam.mll  parseParams.ml  parseParams.mli
lib/smt/: bddapronSmt.ml  bddapronSmt.mli  yicesSmt.ml
lib/trans/: partitionUtil.mli  relAbstr.ml  transAcc.ml  transDiscrete.ml  transGen.ml
lib/util/: log.ml  timeMeas.ml  util.ml
(+207 files in other folders)
