(library
 (name reaver)
 (public_name reaver)
 (libraries cudd gmp ocamlqsopt_ex fixpoint ocamlyices bddapron.bddapron apron.apron apron.polkaMPQ apron.octMPQ apron.boxMPQ bddapron.bdd str)
 (wrapped false)
 (modules (:standard \ stratiter stratiter2 stratiter3 powerCons)))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(include_subdirs unqualified)